# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: production.yaml
migrations/: 20220714192851_create_subscriptions_table.sql  20220716222017_add_status_to_subscriptions.sql  20220716222902_make_status_not_null_in_subscriptions.sql  20220716223251_create_subscription_tokens_table.sql  20220726144257_seed_user.sql  20220729113300_create_idempotency_table.sql  20220730092738_create_newsletter_issues_table.sql  20220730093617_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
