[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
config = { version = "0.13", default-features = false, features = ["toml", "yaml"] }
chrono = { version = "0.4", default-features = false }
uuid = { version = "1.1", features = ["v4"] }
tracing = { version = "0.1", features =["log"] }
tracing-subscriber = { version = "0.3", features =["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.9"
validator = "0.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.4.1", features = ["std"] }
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
wiremock = "0.5"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
linkify = "0.8"
